package com.goriant.sharing.service.exporter;

/**
 * Export result to Excel file format
 *
 * @author Lam Le - lamle@gmx.com
 */
public class ExporterExcelImpl extends AbstractExporter {

}
