package com.goriant.sharing.service.exporter;

/**
 * Export result to PDF format implementation
 *
 * @author Lam Le - lamle@gmx.com
 */
public class ExporterPdfImpl extends AbstractExporter {

}
