package com.goriant.sharing.service.parser;

/**
 * CSV file format parser implementation
 *
 * @author Lam Le - lamle@gmx.com
 */
public class ParserCsvImpl extends AbstractParser {

}
