package com.goriant.sharing.service.parser;

/**
 * Excel file format parser implementation
 *
 * @author Lam Le - lamle@gmx.com
 */
public class ParserExcelImpl extends AbstractParser {

}
